# Tetris-Cpp

./: .gitignore  CMakeLists.txt  README.md  debug.plist  profile-cpu.sh  profile-leaks.sh  profile-mem.sh  test.py
.cache/clangd/index/: FileHelper.cpp.2DCD7D8294BE5E49.idx  FileHelper.cpp.8C56AE447F56DEBF.idx  FileHelper.cpp.D100E4E7B8A0A303.idx  FileHelper.hpp.3295E0EA49E60DD7.idx  FileHelper.hpp.71A3229779B0E32F.idx  GenNN.cpp.645B0FC0EB3E8B42.idx  GenNN.hpp.BBCEE1734344A9F5.idx  NN.cpp.5CE0B55156FAC76B.idx  NN.cpp.6F5014E4E8FF28D6.idx  NN.cpp.9850EA9E22C50A54.idx  NN.hpp.041FCC8EF0D33109.idx  NN.hpp.BD8F34D722D9F610.idx  agent.cpp.07BB0FB0AB0C786A.idx  agent.cpp.A5149AFB57FB96DA.idx  agent.cpp.FDF1A5CF11C659AE.idx  agent.h.196444755C67A02C.idx  agent.h.8FA6ED9B229747B1.idx  blocksNshapes.cpp.23B59D218079A215.idx  blocksNshapes.cpp.A8E38858E74E0DFC.idx  blocksNshapes.cpp.F914700F640AED4D.idx  blocksNshapes.hpp.71076912D28C54FF.idx  blocksNshapes.hpp.C1D95068EB53AA6A.idx  game.cpp.602CC6A1899E5B3F.idx  game.cpp.86C53111C0A646B0.idx  game.cpp.BAAD1E5EAD3418BB.idx  game.h.6E9027B6B4AEA6F6.idx  game.h.BDE58931DF7B495A.idx  loader.cpp.9BA518513125E98D.idx  tetris.cpp.4F25FD8484E275B4.idx  tetris.cpp.945B539D87FADE2A.idx  tetris.cpp.BF8B86C4D19FACCC.idx
.ropeproject/: autoimport.db
AI/: GenNN.cpp  GenNN.hpp  NN.cpp  NN.h  NN.hpp  agent.cpp  agent.h  heuristic.cpp  heuristic.hpp  mpm.cpp  rl.cpp  rl.h  simple-gm.cpp
Gameplay/: display.cpp  display.hpp  game.cpp  game.h  tetris.cpp  tetrisrandom.cpp  tetrisrandom.hpp
Helpers/: FileHelper.cpp  FileHelper.hpp  blocksNshapes.cpp  blocksNshapes.hpp  loader.cpp  loader.hpp
Scripts/: compare.py  dqn.py  gen.py  gennn.py  main.py  params.py  realtime.py
Tetris Cpp/: main.cpp
Tetris Cpp.xcodeproj/: project.pbxproj
Tetris Cpp.xcodeproj/xcuserdata/christopheprat.xcuserdatad/xcschemes/: xcschememanagement.plist
mem-profile.trace/: form.template
mem-profile.trace/Trace0.run/: RunIssues.storedata
mem-profile.trace/Trace1.run/: RunIssues.storedata  event_data_10704.oa
mem-profile.trace/symbols/stores/: 1A62B168-97DE-3219-87DE-AFBFA4C16E8E.symbolsarchive  27260783-9CAD-3780-9EA0-3E4C2E68F218.symbolsarchive  3E7C825E-116B-32D2-AFCC-FDEAFF3791C8.symbolsarchive  41FDD393-3ACC-328D-8108-E59A3A947EC5.symbolsarchive  4251EE1C-062C-3B9A-B6E2-751F77EF9F4A.symbolsarchive  4BB32DA6-4772-39C4-93BA-D1B3068053A1.symbolsarchive  4CE86D18-F3FA-3D2A-A1B8-E7CD8A52FB0D.symbolsarchive  4E1FC98F-6491-3DC9-844C-C6F321BD732B.symbolsarchive  503165ED-BE51-3DC7-A042-73E06B1EA680.symbolsarchive  513B2578-D305-3E3E-9F88-1FE0E257D179.symbolsarchive  684BB108-2332-3EBB-8F07-EE768BBAA3B1.symbolsarchive  795C7127-D074-3650-B2F3-1C20F15E46AE.symbolsarchive  7BD8975E-53E2-36EE-8452-8D5F92A31A77.symbolsarchive  7E2A95EF-3C6E-3630-A70D-5FD3696FC1DB.symbolsarchive  9BC66C1C-D6C8-3E8C-A089-A72755FE8DDB.symbolsarchive  9C7FF4A8-9D78-3AED-B64D-979574A26D8F.symbolsarchive  9CED21B4-D02C-31C0-BF0D-508C1A74FD93.symbolsarchive  A7F6FCAA-A3F1-3409-999B-94A7F5FEED54.symbolsarchive  B39C1E42-F15F-3671-B63E-6BE7BDAD0FCD.symbolsarchive  B95CEB30-ED32-3902-A9CA-10D4A84E89C9.symbolsarchive  C48BC836-F29E-324F-A59E-C45541ECD6A6.symbolsarchive  CD0E272C-3DCD-304C-B61D-B4C36B6DCED8.symbolsarchive  D122BD56-ADF5-32C1-8505-040552654352.symbolsarchive  D2681E0D-7831-3D34-B6BC-CE8723DE184B.symbolsarchive  D5C1D6CD-5431-3A51-81C7-E4FCD6EE6088.symbolsarchive  DAAAC055-2ED3-3B40-BAFB-39BB74137DD8.symbolsarchive  DC1DDE4F-D14F-33EB-9D7C-303104DD8388.symbolsarchive  DFC9530C-E75B-3D1C-A9A6-85C8A709D6A7.symbolsarchive  F04FC49F-51AE-3601-9F77-27DAC043D531.symbolsarchive  F1661613-B1C8-320D-B69D-97F174130E29.symbolsarchive  FA4BB748-4328-3A8A-95B0-912AC25AC5B1.symbolsarchive  FADC0A1F-D636-3754-A688-6D7B905F5C89.symbolsarchive
previous_gens/2024-11-25_13-56/generation_1/individual_0/: layer_2.npy
previous_gens/2024-11-25_13-56/generation_1/individual_1/: layer_0.npy  layer_1.npy  layer_2.npy  layer_3.npy  layer_4.npy  layer_5.npy
previous_gens/2024-11-25_13-56/generation_1/individual_10/: layer_0.npy  layer_1.npy  layer_2.npy  layer_3.npy  layer_4.npy  layer_5.npy
previous_gens/2024-11-25_13-56/generation_1/individual_11/: layer_5.npy
previous_gens/2024-11-25_13-56/generation_1/individual_12/: layer_4.npy  layer_5.npy
previous_gens/2024-11-25_13-56/generation_1/individual_14/: layer_1.npy  layer_2.npy  layer_5.npy
previous_gens/2024-11-25_13-56/generation_1/individual_15/: layer_0.npy  layer_1.npy  layer_2.npy  layer_3.npy  (+2 more)
scores/: scores.csv  scores_0.csv  scores_3.csv  scores_5.csv  scores_dqn_0.csv  scores_dqn_1.csv  scores_dqn_2.csv  scores_dqn_3.csv  scores_dqn_4.csv  scores_gennn_0.csv  scores_gennn_1.csv  scores_gennn_2.csv  scores_gennn_3.csv  scores_gennn_4.csv
scores/1/: scores_0.csv  scores_1.csv  scores_dqn_0.csv  scores_dqn_1.csv  scores_dqn_2.csv  scores_dqn_3.csv  scores_dqn_4.csv  scores_dqn_5.csv  scores_dqn_6.csv  scores_dqn_7.csv  scores_dqn_8.csv  scores_dqn_9.csv
scores/2/: scores_1.csv  scores_2.csv  scores_4.csv
scores/3/: scores_gennn_0.csv  scores_gennn_1.csv  scores_gennn_2.csv
scores/4/: scores_gennn_0.csv  scores_gennn_1.csv  scores_gennn_2.csv
(+965 files in other folders)
